--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #1b244a;
+  background-color: var(--primary-color);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -50,7 +50,7 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 15rem;
+  gap: 7rem;
   height: 100vh;
 }
 
@@ -60,4 +60,22 @@ p {
   align-items: center;
   justify-content: center;
   gap: 15rem;
+}
+
+.reset-button{
+ padding: 10px 25px;
+ font-size: 1rem;
+ text-transform: uppercase;
+ font-weight: 900;
+  background-color: var(--primary-color);
+  color: white;
+  border: 2px solid var(--accent-color);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.reset-button:hover {
+  background-color: var(--accent-color);
+  color: black;
+  border: 2px solid red;
 }
